New note view with list of snippets, to be polished

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="error_name">enter a username</string>
     <string name="error_password">enter a password</string>
     <string name="password_mismatch">enter the same password twice</string>
-    <string name="todo_prompt">Enter todo details:</string>
+    <string name="todo_prompt">Enter note details:</string>
     <string name="save">Save</string>
     <string name="share">Share</string>
     <string name="cancel">Cancel</string>
@@ -23,8 +23,8 @@
     <string name="action_sync">Sync</string>
     <string name="action_logout">Log Out</string>
     <string name="action_login">Log In</string>
-    <string name="login_title">Please log in or sign up to sync your todos to your account.</string>
-    <string name="no_items">No items, click + to started adding todos.</string>
+    <string name="login_title">Please log in or sign up to sync your notes to your account.</string>
+    <string name="no_items">No items, click + to started adding notes.</string>
     <string name="not_logged_in">Not logged in</string>
     <string name="logged_in">Welcome, %1$s</string>
 </resources>
