Added checked box to the list view of notes.

--- a/homenote_app/res/values/strings.xml
+++ b/homenote_app/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="no_items">Click + to started adding notes.</string>
     <string name="not_logged_in">Not logged in</string>
     <string name="logged_in">Welcome, %1$s</string>
+    <string name="see_more">...</string>>
 </resources>
