--- a/homenote_app/res/values/strings.xml
+++ b/homenote_app/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="action_share">Share</string>
     <string name="cancel">Cancel</string>
     <string name="action_discard">Delete</string>
+    <string name="action_download">Download</string>
     <string name="action_new">New Todo</string>
     <string name="action_sync">Sync</string>
     <string name="action_logout">Log Out</string>
